# secret-vault

./: Cargo.toml  NOTICE  README.md
.circleci/: config.yml
.github/workflows/: Basic.yml
examples/: schema.rs
src/: contract.rs  crypto.rs  lib.rs  msg.rs  responses.rs  sign.rs  state.rs  utils.rs
src/vault/: handle.rs  init.rs
tests/: integration.rs
